fixing deal link in activity adding edit to reminders setting stats gap to 0 if negative fixing advertiser and agency search fixing some styles

--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -6,7 +6,7 @@
   background-position: center;
 }
 #header {
-  padding: 10px 30px 0;
+  padding: 10px 40px 0;
 }
 .navbar-nav {
   li {
